# rndr.nvim

./: .gitignore  LICENSE  Makefile  README.md
lua/rndr/: init.lua
lua/rndr/core/: buffer.lua  config.lua
renderer/: CMakeLists.txt
renderer/.cache/clangd/index/: Main.cpp.676F047E42E3F4BC.idx  assets.cpp.EA26680A20AB200E.idx  common.cpp.9C14329A30EA25E7.idx  rendering.cpp.16D4258167B6CA33.idx  rndr.hpp.0E05737CAC2D2843.idx  stb_image.cpp.32CFA5779ACF9344.idx  stb_image.h.6D75410B2C83B0DD.idx
